--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
 streamlit
-langchain
-langchain-openai
-openai
-
-streamlit
-langchain
+langchain==0.0.292
 chromadb
 openai
 beautifulsoup4
 requests
-
